--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <artifactId>WebApp</artifactId>
   <packaging>war</packaging>
   <version>1.1</version>
-  <name>WebApp Maven Webapp</name>
+  <name>WebApp Test</name>
   
   <url>http://maven.apache.org</url>
   <dependencies>
